# appliance-use-recommender

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  fly.toml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_rate_expansion.py  003_oauth_sessions.py
backend/: config.py  database.py  deps.py  limiter.py  main.py  models.py  schemas.py
backend/data/utility_rates/: TEMPLATE.yaml  seattle_city_light.yaml
backend/engine/: optimizer.py  rates.py  solar.py
backend/integrations/: bpa.py  eia.py  energystar.py  geocoding.py  open_meteo.py  solar.py  solaredge.py  urdb.py  zipcode_rates.py
backend/routers/: account.py  appliances.py  auth.py  data_sources.py  forecast.py  onboard.py  recommend.py  shortcuts.py  status.py  utilities.py
backend/services/: utility_lookup.py
backend/tests/: conftest.py  test_eia.py  test_energystar.py  test_optimizer.py  test_rates.py  test_routes.py  test_solar.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/verify/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/onboard/: page.tsx
frontend/src/components/: Button.tsx  Card.tsx  Spinner.tsx  StepIndicator.tsx
frontend/src/components/wizard/: StepAppliances.tsx  StepDone.tsx  StepLocation.tsx  StepPreferences.tsx  StepSolar.tsx
frontend/src/lib/: api.ts
scripts/: ingest_urdb.py  ingest_zipcode_rates.py
