[project]
name = "flowshift"
version = "0.1.0"
description = "Recommend the best time to run high-energy appliances based on grid carbon and utility rates"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",      # SQLite for local dev
    "asyncpg>=0.29",        # PostgreSQL for production
    "httpx>=0.27",          # async HTTP client for external APIs
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "greenlet>=3.0",        # required by SQLAlchemy async on some platforms
    "pvlib>=0.10",          # solar irradiance estimation (non-SolarEdge users)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",           # also used as test client
    "ruff>=0.4",
    "black>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]  # pycodestyle, pyflakes, warnings, isort, pyupgrade
ignore = ["E501"]  # line length enforced by Black

[tool.pytest.ini_options]
asyncio_mode = "auto"
